# ledge-proyecto

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  validate.py
app/: config.py  db.py  logging_config.py  main.py
app/api/: auth.py  routes_debug.py  routes_exceptions.py  routes_ingestion_runs.py  routes_ingestions.py  routes_orders.py
app/domain/: models.py  rules.py
app/pipeline/: consistency.py  dedupe.py  normalize.py  runner.py
app/repositories/: northwind_reader.py  order_repository.py
migrations/: 001_init.sql
scripts/: download_northwind.sh  verify_northwind.sh
tests/integration/: test_ingestion_e2e.py  test_northwind_reader.py
tests/unit/: test_canonical_models.py  test_dedupe.py  test_normalize.py  test_rules.py
